samples/_failures_safe/1761516130_6d89dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_984f9d65.c: In function ‘main’:
./samples/SAFE/__tmp_984f9d65.c:161:40: error: expected ‘)’ at end of input
  161 |         if (parse_log_line(line, &entry
      |                           ~            ^
      |                                        )
./samples/SAFE/__tmp_984f9d65.c:161:9: error: expected declaration or statement at end of input
  161 |         if (parse_log_line(line, &entry
      |         ^~
./samples/SAFE/__tmp_984f9d65.c:161:9: error: expected declaration or statement at end of input
